# complex_network_science

./: .gitignore  README.md  simulation.py
first_project/: erdos_renyi.py  model.py  projeto1.py  requirements.txt  simulation.py  watts_strogatz.py
first_project/models/: erdos_renyi.py  model.py  watts_strogatz.py
first_project/report/: bib.bib  main.tex
first_project/utils/: format_simulation_time.py
first_project/visualizations/: erdos_renyi_and_watts_strogatz_degree_distributions.py  erdos_renyi_average_path_length.py  erdos_renyi_degree_binomial_and_poisson_distributions.py  watts_strogatz_clustering_coefficient_and_average_path_length.py
second_project/: index.ts  start.zsh
second_project/cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  Player.cpp  Umpire.h  cmake_install.cmake  example.cpp  example.h  main.cpp  output.csv  output.txt  playerPayoffs.cpp  playerPayoffs.h  project2  project2.cbp  umpirePayoffs.h  utils.cpp  utils.h
second_project/cpp/agents/: Player.h  agents.cpp  agents.h  fitness.cpp  fitness.h
second_project/cpp/agents/players/: Player.h  payoffsPlayer.cpp  payoffsPlayer.h
second_project/cpp/agents/umpires/: Umpire.cpp  Umpire.h  payoffsUmpire.cpp  payoffsUmpire.h
second_project/cpp/payoffs/: playerPayoffs.cpp  playerPayoffs.h  umpirePayoffs.cpp  umpirePayoffs.h
second_project/cpp/simulation/: Simulation.cpp  Simulation.h
second_project/cpp/utils/: counts.cpp  counts.h  imitationProbabilities.cpp  imitationProbabilities.h  logs.cpp  logs.h  other.cpp  other.h  random.cpp  random.h  utils.cpp  utils.h
second_project/data/1575163315/: output.csv
second_project/data/1575165910/: output.csv
second_project/m/: differential_system.m  differential_system.m~
second_project/payoffMatrices/: umpires.ts
second_project/population/: Player.ts  Umpire.ts
second_project/probabilidades de fixação/: projeto2.py
second_project/py/: graphs.py  markov.py
second_project/simulations/15-05-09-30-11-2019/: output.csv
second_project/simulations/15-29-48-30-11-2019/: output.csv
second_project/simulations/1575163300/: output.csv
second_project/simulations/1575163310/: output.csv
second_project/simulations/1575163605/: output.csv
second_project/simulations/1575166682/: output.csv
second_project/simulations/1575176992/: data.csv
second_project/simulations/1575180727/: data.csv  params.csv
second_project/simulations/1575215865/: data.csv
second_project/tex/: bib.bib  main.tex
second_project/ts/: package.json
(+5 files in other folders)
